--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="Hackverse" content="Hackverse 5.0 NITK" />
+    <meta name="CCC NITK" content="Hackverse 5.0 NITK" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,7 +20,7 @@
     <!-- Preload Google Font -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap"></noscript>
-    <title>Hackverse 5.0</title>
+    <title>CCC NITK</title>
   </head>
   <body>
     <noscript></noscript>
