--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
     <link rel="preload" href="%PUBLIC_URL%/backgrounds/bg-landing-4.png" as="image"> -->
     <link rel="preload" href="%PUBLIC_URL%/logo.png" as="image">
     <!-- Preload Google Font -->
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap"></noscript>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap"></noscript>
     <title>CCC NITK</title>
   </head>
   <body>
