--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logo-dark.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="CCC NITK" content="Hackverse 5.0 NITK" />
@@ -16,7 +16,8 @@
     <!-- <link rel="preload" href="%PUBLIC_URL%/backgrounds/bg-landing-2.png" as="image">
     <link rel="preload" href="%PUBLIC_URL%/backgrounds/bg-landing-3.png" as="image">
     <link rel="preload" href="%PUBLIC_URL%/backgrounds/bg-landing-4.png" as="image"> -->
-    <link rel="preload" href="%PUBLIC_URL%/logo.png" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/logo-dark.png" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/logo-white.png" as="image">
     <!-- Preload Google Font -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap"></noscript>
