--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,13 @@
     <link rel="preload" href="%PUBLIC_URL%/backgrounds/bg-landing-4.png" as="image"> -->
     <link rel="preload" href="%PUBLIC_URL%/logo-dark.png" as="image">
     <link rel="preload" href="%PUBLIC_URL%/logo-white.png" as="image">
-    <!-- Preload Google Font -->
+    <!-- Preload Google Fonts -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap"></noscript>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap">
+    </noscript>
     <title>CCC NITK</title>
   </head>
   <body>
