hero images preload

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Preload images to give them priority -->
-    <link rel="preload" href="%PUBLIC_URL%/backgrounds/Landing-Bg.png" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/hero/ccc.jpg" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/hero/dc.jpg" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/hero/lab.png" as="image">
     <!-- <link rel="preload" href="%PUBLIC_URL%/backgrounds/bg-landing-2.png" as="image">
     <link rel="preload" href="%PUBLIC_URL%/backgrounds/bg-landing-3.png" as="image">
     <link rel="preload" href="%PUBLIC_URL%/backgrounds/bg-landing-4.png" as="image"> -->
